--- a/user-service/src/test/resources/application-test.yml
+++ b/user-service/src/test/resources/application-test.yml
@@ -24,7 +24,7 @@ spring:
     enabled: false
 
   kafka:
-    bootstrap-servers: localhost:9092
+    bootstrap-servers: ${spring.embedded.kafka.brokers:localhost:9093}
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
