--- a/delivery-service/src/main/resources/application-docker.yml
+++ b/delivery-service/src/main/resources/application-docker.yml
@@ -57,6 +57,13 @@ logging:
     org.springframework.kafka: WARN
     org.springframework.security: WARN
 
+springdoc:
+  api-docs:
+    path: /v3/api-docs
+  swagger-ui:
+    path: /swagger-ui.html
+    enabled: true
+
 management:
   endpoints:
     web:
