--- a/api-gateaway/src/main/resources/application.yml
+++ b/api-gateaway/src/main/resources/application.yml
@@ -192,6 +192,15 @@ spring:
       port: 6379
       timeout: 2000ms
 
+# Keycloak Configuration
+keycloak:
+  auth-server-url: http://localhost:8180
+  realm: delivery-realm
+  client-id: delivery-app
+  admin:
+    username: admin
+    password: admin
+
 # Resilience4j Configuration
 resilience4j:
   circuitbreaker:
