--- a/delivery-service/src/main/resources/application-docker.yml
+++ b/delivery-service/src/main/resources/application-docker.yml
@@ -31,9 +31,7 @@ spring:
       group-id: delivery-service-group
       auto-offset-reset: earliest
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
-      properties:
-        spring.json.trusted.packages: com.example.*
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
@@ -49,6 +47,7 @@ app:
   kafka:
     topics:
       order-events: order-events
+      restaurant-events: restaurant-events
       delivery-events: delivery-events
 
 logging:
